# gms-v40-beta-client-mods

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/: com.md
src/: cursor_icon.hpp  dinput8.cpp  dinput8.hpp  main.cpp  main.hpp  rendering.cpp  rendering.hpp
src/hooking/: bootstrap.cpp  bootstrap.hpp  graphics.cpp  graphics.hpp  packets.cpp  packets.hpp  string_pool.cpp  string_pool.hpp
src/maple/: addresses.hpp  classes.hpp  packets.hpp  string.hpp
src/util/hooking/: export.hpp  guard_pages.cpp  guard_pages.hpp
src/util/logging/: concurrent_queue.hpp  console_logger_sink.cpp  console_logger_sink.hpp  file_logger_sink.cpp  file_logger_sink.hpp  logger.cpp  logger.hpp  stack_trace.cpp  stack_trace.hpp
src/util/memory/: patch.hpp
src/util/rendering/: d3d8.h  d3d8types.h  imgui_impl_dx8.cpp  imgui_impl_dx8.hpp
